--- a/.gitignore
+++ b/.gitignore
@@ -559,4 +559,6 @@ healthchecksdb
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
 
+./main
+
 # End of https://www.gitignore.io/api/c,c++,notepadpp,codeblocks,sublimetext,intellij+all,visualstudio,visualstudiocode
