--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -204,20 +204,7 @@ jobs:
         run: cmake --install build --prefix instdir --strip
 
       - name: Install tree
-        run: |
-          cd $HOME
-          # download latest tree source to home directory
-          wget http://mama.indstate.edu/users/ice/tree/src/tree-1.7.0.tgz
-          # unpack
-          tar xzfv tree-1.7.0.tgz
-          cd tree-1.7.0/
-          make
-          # install to $HOME directory
-          make install prefix=$HOME/bin
-          # this will create folders bin, and man
-          cd $HOME
-          # remove original source folder
-          rm -rf tree-1.7.0
+        run: sudo apt-get install tree
 
       - name: SHOW
         run: tree
