--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - "master"
     tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+      - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
   pull_request:
     branches:
       - "master"
@@ -250,16 +250,22 @@ jobs:
           - {
               name: "Windows Latest MSVC",
               artifact: "sorting_algorithms-windows-mingw",
+              extension: ".exe",
+              output: "sorting_algorithms.exe",
               os: ubuntu-latest,
             }
           - {
               name: "Ubuntu Latest GCC",
               artifact: "sorting_algorithms-linux",
+              extension: "",
+              output: "sorting_algorithms",
               os: ubuntu-latest,
             }
           - {
               name: "macOS Latest Clang",
               artifact: "sorting_algorithms-macos-clang",
+              extension: "",
+              output: "sorting_algorithms",
               os: ubuntu-latest,
             }
     needs: release
@@ -288,6 +294,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.set_upload_url.outputs.upload_url }}
-          asset_path: ./${{ matrix.config.artifact }}
-          asset_name: ${{ matrix.config.artifact }}
-          asset_content_type: application/zip
+          asset_path: ./${{ matrix.config.artifact }}/${{ matrix.config.output}}
+          asset_name: ${{ matrix.config.artifact}}${{ matrix.config.extension}}
+          asset_content_type: application/octet-stream
