add Tree command

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -277,6 +277,11 @@ jobs:
           name: ${{ matrix.config.artifact }}
           path: ./
 
+      - name: Install tree
+        run: |
+          sudo apt-get install tree
+          tree
+
       - name: Download URL
         uses: actions/download-artifact@v1
         with:
