--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -256,7 +256,7 @@ jobs:
             }
           - {
               name: "Ubuntu Latest GCC",
-              artifact: "sorting_algorithms-linux",
+              artifact: "sorting_algorithms-linux-gcc",
               extension: "",
               output: "sorting_algorithms",
               os: ubuntu-latest,
@@ -299,6 +299,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.set_upload_url.outputs.upload_url }}
-          asset_path: ./${{ matrix.config.artifact }}/${{ matrix.config.output}}
+          asset_path: ./{{ matrix.config.output}}
           asset_name: ${{ matrix.config.artifact}}${{ matrix.config.extension}}
           asset_content_type: application/octet-stream
